rename image files

--- a/index.html
+++ b/index.html
@@ -5,8 +5,20 @@
 
 <body>
     <h1>Kia ora Taiao! (Hello World!)</h1>
-    <p> This is the beginning of my website home page.</p>
-    <p> It will eventually contain a list of links to all my blogs. </p>
+
+    <img src="/images/agustinus-nathaniel-701029-unsplash.jpg">
+    <img src="/images/alexandre-debieve-561298-unsplash.jpg">
+    <img src="/images/ammie-ngo-690967-unsplash.jpg">
+    <img src="/images/dmitry-schemelev-741563-unsplash.jpg">
+    <img src="/images/gabriele-diwald-201135-unsplash.jpg">
+    <img src="/greg-rakozy-38802-unsplash.jpg">
+    <img src="/sebastian-unrau-47679-unsplash.jpg">
+    <img src="/stephen-walker-293919-unsplash.jpg">
+    <img src="/waldo-broodryk-64321-unsplash.jpg">
+
+
+    
+
 </body>
 
 </html>
