link stylesheet to index file

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <title>My Blog</title>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <h1>Kia ora Taiao! (Hello World!)</h1>
