add blog html pages

--- a/index.html
+++ b/index.html
@@ -1,26 +1,31 @@
 <!DOCTYPE html>
-<html> 
-    
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>My Blog</title>
-        <link rel="stylesheet" href="styles/main.css">
-        <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-    </head>
-    <body>
-        <h1>W E L C O M E</h1>
+<html>
 
-        <img src="images/1-greg-rakozy-38802-unsplash.jpg">
-        <img src="images/2-waldo-broodryk-64321-unsplash.jpg">
-        <img src="images/3-sebastian-unrau-47679-unsplash.jpg">
-        <img src="images/4-alexandre-debieve-561298-unsplash.jpg">
-        <img src="images/5-gabriele-diwald-201135-unsplash.jpg">
-        <img src="images/6-ammie-ngo-690967-unsplash.jpg">
-        <img src="images/7-stephen-walker-293919-unsplash.jpg">
-        <img src="images/8-dmitry-schemelev-741563-unsplash.jpg">
-        <img src="images/9-agustinus-nathaniel-701029-unsplash.jpg">
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>My Blog</title>
+    <link rel="stylesheet" href="styles/main.css">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+</head>
 
-    
-    </body>
+<body class="container">
+    <h1>W E L C O M E</h1>
+    <div>
+        <ul>
+            <li><a href="blog/sprint1-technical.html">Technical Blog</a></li>
+            <li><a href="blog/cultural-blog.html">Cultural Blog</a></li>
+            <li><a href="#">Reflections</a></li>
+            <li><a href="blog/about-me.html">About Me</a></li>
+        </ul>
+    </div>
+
+    <footer>
+        © Linh Pham 2019
+    </footer>
+
+
+
+</body>
+
 </html>
