update blog posts

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Blog</title>
     <link rel="stylesheet" href="styles/main.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
@@ -11,21 +11,27 @@
 
 <body class="container">
     <h1>W E L C O M E</h1>
-    <div>
+    <div id="column-center">
+        <h2><a href="blog/about-me.html">ABOUT ME</a></h2>
+    </div>
+    <br>
+    <div id="column-right">
+        <h2>CULTURAL BLOG</h2>
         <ul>
-            <li><a href="blog/sprint1-technical.html">Technical Blog</a></li>
-            <li><a href="blog/cultural-blog.html">Cultural Blog</a></li>
-            <li><a href="#">Reflections</a></li>
-            <li><a href="blog/about-me.html">About Me</a></li>
+            <li><a href="blog/sprint1-cultural.html">Sprint 1: Identity & Values Exploration</a></li>
+            <li><a href="blog/sprint2-cultural.html">Sprint 2: My Learning Plan</a></li>
+        </ul>
+    </div>
+    <div id="column-left">
+        <h2>TECHNICAL BLOG</h2>
+        <ul>
+            <li><a href="blog/sprint1-technical.html">Sprint 1: The Story of Te Houtaewa</a></li>
+            <li><a href="blog/sprint2-technical.html">Sprint 2: The Difference between Margin, Border, and Padding</a></li>
         </ul>
     </div>
 
-    <footer>
-        © Linh Pham 2019
-    </footer>
-
-
-
+    
 </body>
+
 
 </html>
