--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <ul>
             <li><a href="blog/sprint1-cultural.html">Sprint 1: Identity & Values Exploration</a></li>
             <li><a href="blog/sprint2-cultural.html">Sprint 2: My Learning Plan</a></li>
+            <li><a href="blog/sprint3-cultural.html">Sprint 3: Emotional Intelligence</a></li>
         </ul>
     </div>
     <div id="column-left">
@@ -27,6 +28,7 @@
         <ul>
             <li><a href="blog/sprint1-technical.html">Sprint 1: The Story of Te Houtaewa</a></li>
             <li><a href="blog/sprint2-technical.html">Sprint 2: The Difference between Margin, Border, and Padding</a></li>
+            <li><a href="blog/sprint3-technical.html">Sprint 3: Javascript & the DOM </a></li>
         </ul>
     </div>
 
