complete Sprint 4 Cultural blog

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <li><a href="blog/sprint1-cultural.html">Sprint 1: Identity & Values Exploration</a></li>
             <li><a href="blog/sprint2-cultural.html">Sprint 2: My Learning Plan</a></li>
             <li><a href="blog/sprint3-cultural.html">Sprint 3: Emotional Intelligence</a></li>
+            <li><a href="blog/sprint4-cultural.html">Sprint 4: Neuroplasticity and Growth Mindset</a></li>
         </ul>
     </div>
     <div id="column-left">
