Complete Sprint 4 technical blog

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         <ul>
             <li><a href="blog/sprint1-technical.html">Sprint 1: The Story of Te Houtaewa</a></li>
             <li><a href="blog/sprint2-technical.html">Sprint 2: The Difference between Margin, Border, and Padding</a></li>
-            <li><a href="blog/sprint3-technical.html">Sprint 3: Javascript & the DOM </a></li>
+            <li><a href="blog/sprint3-technical.html">Sprint 3: Javascript & the DOM</a></li>
+            <li><a href="blog/sprint4-technical.html">Sprint 4: Problem Solving</a></li>
         </ul>
     </div>
 
