Update styling and index pages for Sprint 5

--- a/index.html
+++ b/index.html
@@ -9,31 +9,41 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 
-<body class="container">
-    <h1>W E L C O M E</h1>
-    <div id="column-center">
-        <h2><a href="blog/about-me.html">ABOUT ME</a></h2>
-    </div>
-    <br>
-    <div id="column-right">
-        <h2>CULTURAL BLOG</h2>
-        <ul>
-            <li><a href="blog/sprint1-cultural.html">Sprint 1: Identity & Values Exploration</a></li>
-            <li><a href="blog/sprint2-cultural.html">Sprint 2: My Learning Plan</a></li>
-            <li><a href="blog/sprint3-cultural.html">Sprint 3: Emotional Intelligence</a></li>
-            <li><a href="blog/sprint4-cultural.html">Sprint 4: Neuroplasticity and Growth Mindset</a></li>
-        </ul>
-    </div>
-    <div id="column-left">
-        <h2>TECHNICAL BLOG</h2>
-        <ul>
-            <li><a href="blog/sprint1-technical.html">Sprint 1: The Story of Te Houtaewa</a></li>
-            <li><a href="blog/sprint2-technical.html">Sprint 2: The Difference between Margin, Border, and Padding</a></li>
-            <li><a href="blog/sprint3-technical.html">Sprint 3: Javascript & the DOM</a></li>
-            <li><a href="blog/sprint4-technical.html">Sprint 4: Problem Solving</a></li>
-        </ul>
-    </div>
+<body>
+    <div class="container">
+        <h1>W E L C O M E</h1>
 
+        <br>
+        <div id="column-right">
+            <h2>CULTURAL BLOG</h2>
+            <ul>
+                <li><a href="blog/sprint1-cultural.html">Sprint 1: Identity & Values Exploration</a></li>
+                <li><a href="blog/sprint2-cultural.html">Sprint 2: My Learning Plans</a></li>
+                <li><a href="blog/sprint3-cultural.html">Sprint 3: Emotional Intelligence</a></li>
+                <li><a href="blog/sprint4-cultural.html">Sprint 4: Neuroplasticity & Growth Mindset</a></li>
+                <li><a href="blog/sprint5-cultural.html">Sprint 5: Reflection on Core Skills</a></li>
+            </ul>
+        </div>
+        <div id="column-left">
+            <h2>TECHNICAL BLOG</h2>
+            <ul>
+                <li><a href="blog/sprint1-technical.html">Sprint 1: The Story of Te Houtaewa</a></li>
+                <li><a href="blog/sprint2-technical.html">Sprint 2: The Difference between Margin, Border & Padding</a></li>
+                <li><a href="blog/sprint3-technical.html">Sprint 3: Javascript & the DOM</a></li>
+                <li><a href="blog/sprint4-technical.html">Sprint 4: Problem Solving</a></li>
+            </ul>
+        </div>
+        <div id="column-left-row2">
+            <h2 class="h2-large">PROJECTS</h2>
+            <ul>
+                <li><a href="https://linh-pham-nz.github.io/minesweeper/">Minesweeper</a></li>
+                <li><a href="https://linh-pham-nz.github.io/calculator/">Calculator</a></li>
+            </ul>
+        </div>
+        <div id="column-right-row2">
+            <h2 class="h2-large"><a href="blog/about-me.html">ABOUT ME</a></h2>
+        </div>
+    </div>
     
 </body>
 
